[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["cloudshortener", "tests"]
target-version = "py313"  # adjust if you support a lower runtime
line-length = 120         # match your preferred style

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = ["E501", "S101", "I001", "UP045"]         # drop this once long lines are fixed

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F601", "S106", "E303", "S113"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
