[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["cloudshortener", "tests"]
target-version = "py313"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = ["E501", "S101", "I001", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F601", "S106", "E303", "S113", "S105"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
