[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudshortener"
version = "0.1.0"
requires-python = ">=3.13.0"
dependencies = [
    "redis>=7.0.0,<8.0.0",
    "xxhash>=3.6.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "boto3",
]

[dependency-groups]
dev = [
    "coverage",
    "freezegun",
    "pytest",
    "pytest-cov",
    "requests>=2.32.5",
    "ruff",
    "ty",
    "types-boto3-cloudformation>=1.42.3",
    "types-boto3-cognito-idp>=1.42.59",
    "types-boto3-elasticache>=1.42.3",
]
gcp = [
    "functions-framework>=3.8.0,<4",
    "google-cloud-storage>=2.18.0,<3",
    "google-cloud-secret-manager>=2.22.0,<3",
    "google-cloud-api-gateway>=1.15.0",
    "google-cloud-redis>=2.21.0",
]

[tool.ruff]
src = ["cloudshortener", "tests"]
target-version = "py313"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = ["E501", "S101", "I001", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F601", "S106", "E303", "S113", "S105"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
